--- a/profile-orders.html
+++ b/profile-orders.html
@@ -154,19 +154,20 @@
                         <div class="profile-leftsidebar-content">
                             <ul class="list-unstyled">
                                 <li>
-                                    <div class="profile-order-content">
-                                        <div class="order-media">
-                                            <div class="order-media-pic">
-                                                <img src="images/img/cv1.webp" alt="#">
+                                    <div class="profile-order-content row">
+                                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-12">
+                                            <div class="order-media">
+                                                <div class="order-media-pic">
+                                                    <img src="images/img/cv1.webp" alt="#">
+                                                </div>
                                             </div>
                                         </div>
+                                       <div class="col-xl-10 col-lg-9 col-md-9 col-sm-12">
                                         <div class="order-content">
                                             <h4> عاملة منزلية </h4>
                                             <p> تم اختيار احد مسؤلى خدمة العملاء</p>
+                                            <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
                                             <div class="order-details">
-                                                <div class="order-info">
-                                                    <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
-                                                </div>
                                                 <div class="view-button">
                                                     <a href="#!" class="download"><i class="fa-regular fa-download"></i> تنزيل السيرة الذاتية</a>
                                                     <a href="order-details.html" class
@@ -174,65 +175,68 @@
                                                 </div>
                                             </div>
                                         </div>
+                                       </div>
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="profile-order-content">
-                                        <div class="order-media">
-                                            <div class="order-media-pic">
-                                                <img src="images/img/cv1.webp" alt="#">
-                                            </div>
-                                        </div>
-                                        <div class="order-content">
-                                            <h4> عاملة منزلية </h4>
-                                            <p> لقد انتهت صلاحية الحجز وتم الغاءة</p>
-                                            <div class="order-details">
-                                                <div class="order-info">
-                                                    <p class="order-number"><i class="fa-regular fa-suitcase"></i>CDS49318</p>
+                                    <div class="profile-order-content row">
+                                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-12">
+                                            <div class="order-media">
+                                                <div class="order-media-pic">
+                                                    <img src="images/img/cv1.webp" alt="#">
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-xl-10 col-lg-9 col-md-9 col-sm-10">
+                                            <div class="order-content">
+                                                <h4> عاملة منزلية </h4>
+                                                <p> لقد انتهت صلاحية الحجز وتم الغاءة</p>
+                                                <p class="order-number"><i class="fa-regular fa-suitcase"></i>CDS49318</p>
+                                            </div>
+                                            </div>
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="profile-order-content">
-                                        <div class="order-media">
-                                            <div class="order-media-pic">
-                                                <img src="images/img/cv1.webp" alt="#">
-                                            </div>
-                                        </div>
-                                        <div class="order-content">
-                                            <h4> عاملة منزلية </h4>
-                                            <p> تم تنفيذ المهمة بنجاح </p>
-                                            <div class="order-details">
-                                                <div class="order-info">
-                                                    <p class="order-number"><i class="fa-regular fa-suitcase"></i>MYK8496313</p>
+                                    <div class="profile-order-content row">
+                                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-12">
+                                            <div class="order-media">
+                                                <div class="order-media-pic">
+                                                    <img src="images/img/cv1.webp" alt="#">
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-xl-10 col-lg-9 col-md-9 col-sm-10">
+                                            <div class="order-content">
+                                                <h4> عاملة منزلية </h4>
+                                                <p> تم تنفيذ المهمة بنجاح </p>
+                                                <p class="order-number"><i class="fa-regular fa-suitcase"></i>MYK8496313</p>
+                                            </div>
+                                            </div>
                                     </div>
                                 </li>
                                 <li>
-                                    <div class="profile-order-content">
-                                        <div class="order-media">
-                                            <div class="order-media-pic">
-                                                <img src="images/img/cv1.webp" alt="#">
+                                    <div class="profile-order-content row">
+                                        <div class="col-xl-2 col-lg-3 col-md-3 col-sm-12">
+                                            <div class="order-media">
+                                                <div class="order-media-pic">
+                                                    <img src="images/img/cv1.webp" alt="#">
+                                                </div>
                                             </div>
                                         </div>
+                                       <div class="col-xl-10 col-lg-9 col-md-9 col-sm-12">
                                         <div class="order-content">
                                             <h4> عاملة منزلية </h4>
                                             <p> تم اختيار احد مسؤلى خدمة العملاء</p>
+                                            <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
                                             <div class="order-details">
-                                                <div class="order-info">
-                                                    <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
-                                                </div>
                                                 <div class="view-button">
                                                     <a href="#!" class="download"><i class="fa-regular fa-download"></i> تنزيل السيرة الذاتية</a>
-                                                    <a href="#!" class
+                                                    <a href="order-details.html" class
                                                     ="details" ><i class="fa-regular fa-circle-info"></i>التفاصيل</a>
                                                 </div>
                                             </div>
                                         </div>
+                                       </div>
                                     </div>
                                 </li>                          
                             </ul>
