--- a/selected-customer-service.html
+++ b/selected-customer-service.html
@@ -31,79 +31,8 @@
   <link rel="stylesheet" href="css/responsive.css" />
 </head>
 <body>
-  <!-- loader -->
-  <div class="loader">
-    <span class="spinner"></span>
-  </div>
-  <!-- end loader -->
   <!-- ================ Header ================= -->
-  <header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.svg" />
-        </a>
-        <!-- links in md media -->
-        <div class="d-none d-lg-block">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"> الرئيسية </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Services"> خدماتنا  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Countries"> دول الاستقدام </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="steps.html"> تتبع طلبك </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html"> الاسئلة الشائعة  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact_us.html"> تواصل معنا </a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="profile.html"> حسابي </a>
-            </li> -->
-            <li class="nav-item ">
-              <a href="login.html" class="nav-link"> تسجيل دخول </a>
-            </li>
-            <li class="nav-item">
-              <a href="all-workers.html" class="defaultBtn mx-1"><i class="fa-solid fa-briefcase me-2"></i> طلب استقدام
-                <span></span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!-- toggle btn -->
-        <div class="sideBtn d-lg-none">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <!-- side menu -->
-        <div class="sideMenu">
-          <div class="sideMenuInner">
-            <a class="sideMenuLink" href="index.html"> الرئيسية </a>
-            <a class="sideMenuLink" href="services.html"> خدماتنا </a>
-            <a class="sideMenuLink" href="countries.html"> دول الاستقدام </a>
-            <a class="sideMenuLink" href="steps.html"> تتبع طلبك </a>
-            <a class="sideMenuLink" href="musaned.html"> الأسئلة الشائعة </a>
-            <a class="sideMenuLink" href="contact_us.html"> تواصل معنا </a>
-            <a class="sideMenuLink"  href="login.html" > تسجيل دخول </a>
-            <a class="defaultBtn mb-2"  href="all-workers.html" > <i class="fa-solid fa-briefcase me-2"></i> طلب استقدام
-              <span></span>
-            </a>
-          </div>
-        </div>
-        
-      </div>
-    </nav>
-
-  </header>
-  <!-- ================ /Header ================= -->
+  <header></header>
       <!-- INNER PAGE BANNER -->
     <div class=" overlay-wraper page-banner" style="height: 100px;">
         <div class="overlay-main"></div>
