--- a/order-details.html
+++ b/order-details.html
@@ -28,76 +28,12 @@
   <link rel="stylesheet" href="css/odometer.min.css" />
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
   <!-- ================ Header ================= -->
-  <header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img src="images/logo.svg" />
-        </a>
-        <!-- links in md media -->
-        <div class="d-none d-lg-block">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"> الرئيسية </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Services"> خدماتنا  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#Countries"> دول الاستقدام </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="steps.html"> تتبع طلبك </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html"> الاسئلة الشائعة  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact_us.html"> تواصل معنا </a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="profile.html"> حسابي </a>
-            </li> -->
-            <li class="nav-item ">
-              <a href="login.html" class="nav-link"> تسجيل دخول </a>
-            </li>
-            <li class="nav-item">
-              <a href="all-workers.html" class="defaultBtn mx-1"><i class="fa-solid fa-briefcase me-2"></i> طلب استقدام
-                <span></span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!-- toggle btn -->
-        <div class="sideBtn d-lg-none">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <!-- side menu -->
-        <div class="sideMenu">
-          <div class="sideMenuInner">
-            <a class="sideMenuLink" href="index.html"> الرئيسية </a>
-            <a class="sideMenuLink" href="services.html"> خدماتنا </a>
-            <a class="sideMenuLink" href="countries.html"> دول الاستقدام </a>
-            <a class="sideMenuLink" href="steps.html"> تتبع طلبك </a>
-            <a class="sideMenuLink" href="musaned.html"> الأسئلة الشائعة </a>
-            <a class="sideMenuLink" href="contact_us.html"> تواصل معنا </a>
-            <a class="sideMenuLink"  href="login.html" > تسجيل دخول </a>
-            <a class="defaultBtn mb-2"  href="all-workers.html" > <i class="fa-solid fa-briefcase me-2"></i> طلب استقدام
-              <span></span>
-            </a>
-          </div>
-        </div>
-        
-      </div>
-    </nav>
-
-  </header>
+  <header></header>
   <!-- ================ /Header ================= -->
 
     <!-- INNER PAGE BANNER -->
@@ -161,24 +97,26 @@
         </ol>
       </div>
       <div class="profileContent p-0">
-        <div class="profile-order-content">
-          <div class="order-media">
-              <div class="order-media-pic">
-                <img src="images/img/cv1.webp" alt="#">
+        <div class="profile-order-content row">
+          <div class="col-xl-2 col-lg-3 col-md-3 col-sm-12">
+              <div class="order-media">
+                  <div class="order-media-pic">
+                      <img src="images/img/cv1.webp" alt="#">
+                  </div>
               </div>
           </div>
+         <div class="col-xl-10 col-lg-9 col-md-9 col-sm-12">
           <div class="order-content">
               <h4> عاملة منزلية </h4>
               <p> تم اختيار احد مسؤلى خدمة العملاء</p>
+              <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
               <div class="order-details">
-                  <div class="order-info">
-                      <p class="order-number"><i class="fa-regular fa-suitcase"></i>BBC123546</p>
-                  </div>
                   <div class="view-button">
                       <a href="#!" class="download"><i class="fa-regular fa-download"></i> تنزيل السيرة الذاتية</a>
                   </div>
               </div>
           </div>
+         </div>
       </div>
       </div>
       <section class="selectedCustomer">
@@ -199,8 +137,7 @@
         </div>
       </section>
     </section>
-  </content>
-  
+    <footer></footer>>  
   <script src="js/jquery.min.js"></script>
   <!-- bootstrap -->
   <script src="js/bootstrap.min.js"></script>
