--- a/profile-notification.html
+++ b/profile-notification.html
@@ -28,6 +28,7 @@
   <link rel="stylesheet" href="css/odometer.min.css" />
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
