--- a/footer.html
+++ b/footer.html
@@ -5,7 +5,8 @@
               <div class="col-lg-6 col-md-12">
                   <div class="widget widget_about">
                       <div class="logo-footer clearfix">
-                          <a href="index.html"><img src="images/logo/logoH-W.png" alt=""></a>
+                          <a href="index.html" aria-label="GO To Main Page">
+                            <img src="images/logo/logoH-W.png" alt=""></a>
                       </div>
                       <p>نهتم في سهل ساند للاستقدام بخدمتكم عن طريق قنوات تواصل متعددة ونضمن لكم خدمة متكاملة وتجربة عميل مميزة.</p>
                       <ul class="ftr-list">
@@ -52,10 +53,10 @@
                   @2022 .</span>
               </div>
               <ul class="social-icons">
-                  <li><a href="javascript:void(0);" class="fab fa-facebook-f"></a></li>
-                  <li><a href="javascript:void(0);" class="fab fa-twitter"></a></li>
-                  <li><a href="javascript:void(0);" class="fab fa-instagram"></a></li>
-                  <li><a href="javascript:void(0);" class="fab fa-youtube"></a></li>
+                  <li><a href="javascript:void(0);" class="fab fa-facebook-f" aria-label="Go To Facebook"></a></li>
+                  <li><a href="javascript:void(0);" class="fab fa-twitter" aria-label="Go To Twitter"></a></li>
+                  <li><a href="javascript:void(0);" class="fab fa-instagram" aria-label="Go To Instagram"></a></li>
+                  <li><a href="javascript:void(0);" class="fab fa-youtube" aria-label="Go To Youtube"></a></li>
               </ul>
               
           </div>
