--- a/all-workers.html
+++ b/all-workers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -347,8 +347,8 @@
                             </a>
                           </div>
                           <div class="moreImgs">
-                            <a data-fancybox="user1-CV" href="images/users/cv1.png">
-                              <img src="images/users/cv1.png" alt="">
+                            <a data-fancybox="user1-CV" href="images/img/cv1.webp">
+                              <img src="images/img/cv1.webp" alt="">
                             </a>
                             <a data-fancybox="user1-CV" href="images/users/cv2.webp">
                               <img src="images/users/cv2.webp" alt="">
