--- a/index.html
+++ b/index.html
@@ -33,9 +33,19 @@
 
 <body>
   <!-- loader -->
-  <div class="loader">
+  <!-- <div class="loader">
     <span class="spinner"></span>
-  </div>
+  </div> -->
+      <!-- LOADING AREA START ===== -->
+      <div class="loading-area">
+        <div class="loading-box"></div>
+        <div class="loading-pic">
+            <div class="wrapper">
+                <div class="cssload-loader"></div>
+            </div>
+        </div>
+    </div>
+    <!-- LOADING AREA  END ====== -->
   <!-- end loader -->
   <!-- ================ Header ================= -->
   <header></header>
