--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <!-- title -->
   <title>سهل ساند | SAHL SANED</title>
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/fav.svg" />
+  <link rel="icon" type="image/x-icon" href="images/logo/fav.png" />
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
   <!-- Font Awesome -->
@@ -59,6 +59,7 @@
                                             <span>تسجيل الدخول</span>
                                         </div>
                                     </div>
+                                  <form action="index.html">
                                     <div class="login-form">
                                         <div class="row">
                                              <div class="col-lg-12">
@@ -77,7 +78,7 @@
                                                     <div class="form-check">
                                                       <input type="checkbox" class="form-check-input" id="Password4">
                                                       <label class="form-check-label rem-forgot" for="Password4">تذكرنى 
-                                                        <a href="javascript:;" class="site-text-primary">هل نسيت كلمة المرور ؟</a></label>
+                                                        <a href="forget-password.html" class="site-text-primary">هل نسيت كلمة المرور ؟</a></label>
                                                     </div>
                                                   </div>
                                                 </div>
@@ -93,7 +94,8 @@
                                                 </div>
                                                </div>
                                         </div>
-                                     </div>                                    
+                                     </div> 
+                                  </form>                                   
                                 </div>
                             </div>
                         </div>
