--- a/trackOrder.html
+++ b/trackOrder.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <!-- title -->
   <title>سهل ساند | SAHL SANED</title>
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/fav.svg" />
+  <link rel="icon" type="image/x-icon" href="images/logo/fav.png" />
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
   <!-- Font Awesome -->
@@ -28,7 +28,7 @@
   <link rel="stylesheet" href="css/odometer.min.css" />
   <!-- Custom style  -->
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/responsive.css"/>
+  <link rel="stylesheet" href="css/responsive.css" />
 </head>
 
 <body>
@@ -60,7 +60,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <form >
+                    <form  action="order-details.html">
                         <div class="inputField">
                           <label for="track">
                             <i class="fa-solid fa-map-pin"></i>
