--- a/header.html
+++ b/header.html
@@ -24,9 +24,9 @@
         <li class="nav-item">
           <a class="nav-link" href="Contact-us.html"> تواصل معنا </a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="profile.html"> حسابي </a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" href="profile-orders.html"> حسابي </a>
+        </li>
         <li class="nav-item ">
           <a href="login.html" class="nav-link"> تسجيل دخول </a>
         </li>
