--- a/order-details.html
+++ b/order-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <!-- title -->
   <title>سهل ساند | SAHL SANED</title>
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/fav.svg" />
+  <link rel="icon" type="image/x-icon" href="images/logo/fav.png" />
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
   <!-- Font Awesome -->
