--- a/otp.html
+++ b/otp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <!-- Required meta tags -->
   <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
   <!-- title -->
   <title>سهل ساند | SAHL SANED</title>
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="img/fav.svg" />
+  <link rel="icon" type="image/x-icon" href="images/logo/fav.png" />
   <!-- Bootstrap -->
   <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
   <!-- Font Awesome -->
@@ -60,6 +60,7 @@
                                             <p>برجاء كتابة كود التفعيل المرسل الى الرقم 0123456789</p>
                                         </div>
                                     </div>
+                                    <form action="index.html">
                                     <div class="login-form register-form">
                                         <div class="row">
                                              <div class="col-lg-12">
@@ -73,7 +74,8 @@
                                                 </div>
                                                </div>
                                         </div>
-                                     </div>                                    
+                                     </div>  
+                                     </form>                                  
                                 </div>
                             </div>
                         </div>
