--- a/reset-password.html
+++ b/reset-password.html
@@ -42,7 +42,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-5 login-media-row">
                             <div class="login-media">
                                 <div class="login-image">
-                                    <img src="images/img/login-bg.png" alt="">
+                                    <img src="images/img/Forgot password.png" alt="">
                                 </div>
                             </div>
                         </div>
@@ -56,46 +56,30 @@
                                 <div class="login-detail-inner">
                                     <div class="login-title text-center">
                                         <div class="title-heading">
-                                            <span>انشاء حساب</span>
+                                            <span>اعادة تعيين كلمة السر </span>
                                         </div>
                                     </div>
-                                    <form action="otp.html">
+                                    <form action="index.html">
                                     <div class="login-form register-form">
                                         <div class="row">
-                                            <div class="col-lg-12">
+                                             <div class="col-lg-12">
                                                 <div class="form-group mb-2">
-                                                   <input name="Name" type="text" required="" class="form-control" placeholder=" اسم المستخدم">
+                                                   <input name="pass1" type="password" required="" class="form-control" placeholder="كلمة المرور">
                                                  </div>
                                              </div>
                                              <div class="col-lg-12">
                                                 <div class="form-group mb-2">
-                                                   <input name="phone" type="tel" required="" class="form-control" placeholder="رقم الهاتف">
+                                                   <input name="pass2" type="password" required="" class="form-control" placeholder="  تأكيد كلمة المرور">
                                                  </div>
                                              </div>
-                                             <div class="col-lg-6">
-                                                <div class="form-group mb-2">
-                                                    <input name="Password" type="password" class="form-control" required="" placeholder="كلمة المرور*">
-                                                </div>
-                                              </div>
-                                              <div class="col-lg-6">
-                                                <div class="form-group mb-2">
-                                                    <input name="Password" type="password" class="form-control" required="" placeholder="تأكيد كلمة المرور*">
-                                                </div>
-                                              </div>
                                                <div class="col-md-12">
                                                 <div class="form-group">
-                                                    <button type="submit" class="site-button">انشاء حساب</button>
-                                                </div>
-                                               </div>
-                                               <div class="col-md-12">
-                                                <div class="form-group">
-                                                    <label class="form-check-label new-account">بالفعل لدى حساب ؟  
-                                                        <a href="login.html" class="login-href">  تسجيل الدخول </a></label>
+                                                    <button type="submit" class="site-button"> تأكيد</button>
                                                 </div>
                                                </div>
                                         </div>
-                                     </div> 
-                                     </form>                                   
+                                     </div>   
+                                     </form>                                 
                                 </div>
                             </div>
                         </div>
