--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <header></header>
   <!-- ================ /Header ================= -->
   <content>
+    <div class="overlay-content"></div>
     <!-- start main Slider -->
     <section class="section-box mb-70 mt-100">
       <div class="container-fluid">
@@ -60,11 +61,35 @@
               <div class="col-xl-7 col-lg-12">
                 <div class="block-banner">
                   <h6 class="heading-title">مع سهل ساند .....</h6>
-                  <h1 class="heading-banner wow animate__animated animate__fadeInUp"> أفضل مكتب للإستقدام فى السعودية</h1>
+                  <h1 class="heading-banner wow animate__animated animate__fadeInUp"> أحد أعرق مكاتب الإستقدام في المملكة</h1>
                   <div class="banner-description mt-20 wow animate__animated animate__fadeInUp" data-wow-delay=".1s">أفضل مكتب استقدام العمالة المنزلية بمعايير دولية ومهنية عالية، نسعى لتقديم تجربة استقدام مثالية لعملائنا ،نوفر أيدى عاملة مميزة ومدربة بحرفية</div>
-                  <div class="mt-30"> 
+                  <ul class="features-list list-unstyled d-flex flex-wrap">
+                    <!-- feature item #1 -->
+                    <li class="feature-item">
+                      <div class="feature__icon">
+                        <i class="fa-regular fa-id-card"></i>
+                      </div>
+                      <h2 class="feature__title"> اختيار العمالة </h2>
+                    </li><!-- /.feature-item -->
+                    <!-- feature item #2 -->
+                    <li class="feature-item">
+                      <div class="feature__icon">
+                          <i class="fa-thin fa-plane"></i>
+                      </div>
+                      <h2 class="feature__title"> نقل الخدمات </h2>
+                    </li><!-- /.feature-item --> 
+                    <!-- feature item #3 -->
+                    <li class="feature-item">
+                      <div class="feature__icon">
+                        <i class="fa-light fa-globe"></i>
+                      </div>
+                      <a href="dailyDemand.html"><h2 class="feature__title"> قطاع الأعمال </h2></a>
+                    </li><!-- /.feature-item -->
+                  </ul>
+                  <!-- <div class="mt-30"> 
                     <a href="all-workers.html" class="btn btn-default mr-15">طلب استقدام </a>
-                    <a href="trackOrder.html" class="btn btn-border-brand-2"> تتبع طلبك </a></div>
+                    <a href="trackOrder.html" class="btn btn-border-brand-2"> تتبع طلبك </a>
+                  </div> -->
                 </div>
               </div>
               <div class="col-xl-5 col-lg-12 d-none d-xl-block col-md-6">
@@ -92,24 +117,28 @@
                     <h6> من نحن </h6>                                
                   </div>
                   <h2 class="ab-det-title">مكتب سهل ساند للاستقدام</h2>
-                  <p class="ad-det-desc">يعتبر مكتب سهل ساند أفضل مكتب استقدام عمالة منزلية حاصل على ترخيص من منصة مساند الحكومية
-                             لتوفير خدمات استقدام عمالة منزلية بمعايير الجودة العالمية.</p>
+                  <p class="ad-det-desc">أحد أعرق مكاتب الاستقدام في المملكة منذ أكثر من 30 سنة ولدينا
+                    10 فروع خارج المملكة لجلب أفضل العمالة المدربة والماهرة طبقا للمعايير الدولية وحاجة العملاء </p>
                   <ul class="description-list list-unstyled">
                     <li>
                       <i class="fa-solid fa-circle-check"></i>
-                      خدمة عملاء مميزة على مدار اليوم
+                      خدمة عملاء على مدار الساعة
                     </li>
                     <li>
                       <i class="fa-solid fa-circle-check"></i>
-                      مرخصين من وزارة العدل
+                      ترخيص من وزارة الموارد البشرية
                     </li>
                     <li>
                       <i class="fa-solid fa-circle-check"></i>
-                      إيصال العمالة إلى المنزل
+                       معتمدين من منصة مساند للعمالة المنزلية
                     </li>
                     <li>
                       <i class="fa-solid fa-circle-check"></i>
-                      ضمان 3 شهور 
+                      إمكانية توصيل العمالة الى المنزل  
+                    </li>
+                    <li>
+                      <i class="fa-solid fa-circle-check"></i>
+                      ضمان العمالة 3 أشهر 
                     </li>
                   </ul> 
                 </div>
