--- a/header.html
+++ b/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html" aria-label="Go To Main Page">
-      <img src="images/logo/logoH.png" alt="logo-name" />
+      <img src="images/logo/logoH-W.png" alt="logo-name" />
     </a>
     <!-- links in md media -->
     <div class="d-none d-lg-block">
