--- a/order-details.html
+++ b/order-details.html
@@ -137,7 +137,7 @@
         </div>
       </section>
     </section>
-    <footer></footer>>  
+    <footer></footer>  
   <script src="js/jquery.min.js"></script>
   <!-- bootstrap -->
   <script src="js/bootstrap.min.js"></script>
