--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
   <script src="js/particles.js"></script>
   <script src="js/Custom.js"></script>
   <script>
-    $("header").load("header.html");
+    // $("header").load("header.html");
     $("footer").load("footer.html");
   </script>
   <script>
