--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
 
 <body>
   <!-- loader -->
-  <!-- <div class="loader">
-    <span class="spinner"></span>
-  </div> -->
       <!-- LOADING AREA START ===== -->
       <div class="loading-area">
         <div class="loading-box"></div>
@@ -642,10 +639,37 @@
           </div>
       </div>
       <!-- ================================= Footer ============================================== -->
-      <footer >
-      </footer>
+      <footer ></footer>
       <!-- FOOTER END -->
-
+      <div class="ads-popup">
+        <div class="ads-float-popup popup-ani">
+          <header>
+            <img src="images/logo/logoH.png" alt="logo"/>
+          </header>
+          <div class="ads-content">
+            <h1>مطلوب عاملات منزليات</h1>
+            <div class="ads-img">
+              <img src="images/img/ads2.jpg" alt="ads-image"/>
+            </div>
+            <div class="ads-detail">
+              <ul class="list-unstyled">
+                <li>أوغندا</li>
+                <li> كينيا </li>
+                <li> بنجلادش </li>
+                <li> الفلبين </li>
+                <li> الهند </li>
+                <li> موريتانيا </li>
+                <li> جيبوتى </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="button-float-ads">
+          <div class="wrap">
+            <div class="img-fab img"></div>
+          </div>
+        </div>
+      </div>
   </content>
   <!-- <footer></footer> -->
   <script src="js/jquery.min.js"></script>
