--- a/index.html
+++ b/index.html
@@ -45,7 +45,71 @@
     <!-- LOADING AREA  END ====== -->
   <!-- end loader -->
   <!-- ================ Header ================= -->
-  <header></header>
+  <header>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html" aria-label="Go To Main Page">
+          <img src="images/logo/logoH-W.png" alt="logo-name" class="white-logo"/>
+          <img src="images/logo/logoH.png" alt="logo-name"  class="dark-logo"/>
+        </a>
+        <!-- links in md media -->
+        <div class="d-none d-lg-block">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html"> الرئيسية </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="services.html"> خدماتنا  </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="countries.html"> دول الاستقدام </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="trackOrder.html"> تتبع طلبك </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="faq.html"> الاسئلة الشائعة  </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contact-us.html"> تواصل معنا </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile-orders.html"> حسابي </a>
+            </li>
+            <li class="nav-item ">
+              <a href="login.html" class="nav-link"> تسجيل دخول </a>
+            </li>
+            <li class="nav-item">
+              <a href="all-workers.html" class="defaultBtn mx-1"> طلب استقدام
+                <span></span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- toggle btn -->
+        <div class="sideBtn d-lg-none">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- side menu -->
+        <div class="sideMenu">
+          <div class="sideMenuInner">
+            <a class="sideMenuLink" href="index.html"> الرئيسية </a>
+            <a class="sideMenuLink" href="services.html"> خدماتنا </a>
+            <a class="sideMenuLink" href="countries.html"> دول الاستقدام </a>
+            <a class="sideMenuLink" href="trackOrder.html"> تتبع طلبك </a>
+            <a class="sideMenuLink" href="faq.html"> الأسئلة الشائعة </a>
+            <a class="sideMenuLink" href="Contact-us.html"> تواصل معنا </a>
+            <a class="sideMenuLink"  href="login.html" > تسجيل دخول </a>
+            <a class="defaultBtn mb-2"  href="all-workers.html" > طلب استقدام
+              <span></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
   <!-- ================ /Header ================= -->
   <content>
     <div class="overlay-content"></div>
@@ -643,9 +707,6 @@
       <!-- FOOTER END -->
       <div class="ads-popup">
         <div class="ads-float-popup popup-ani">
-          <header>
-            <img src="images/logo/logoH.png" alt="logo"/>
-          </header>
           <div class="ads-content">
             <h1>مطلوب عاملات منزليات</h1>
             <div class="ads-img">
@@ -662,6 +723,7 @@
                 <li> جيبوتى </li>
               </ul>
             </div>
+            <a href="#!" class="ads-button">اطلب الآن</a>
           </div>
         </div>
         <div class="button-float-ads">
@@ -671,7 +733,6 @@
         </div>
       </div>
   </content>
-  <!-- <footer></footer> -->
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -685,7 +746,7 @@
   <script src="js/particles.js"></script>
   <script src="js/Custom.js"></script>
   <script>
-    $("header").load("header.html");
+    // $("header").load("header.html");
     $("footer").load("footer.html");
   </script>
   <script>
