--- a/index.html
+++ b/index.html
@@ -45,71 +45,7 @@
     <!-- LOADING AREA  END ====== -->
   <!-- end loader -->
   <!-- ================ Header ================= -->
-  <header>
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html" aria-label="Go To Main Page">
-          <img src="images/logo/logoH-W.png" alt="logo-name" class="white-logo"/>
-          <img src="images/logo/logoH.png" alt="logo-name"  class="dark-logo"/>
-        </a>
-        <!-- links in md media -->
-        <div class="d-none d-lg-block">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html"> الرئيسية </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html"> خدماتنا  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="countries.html"> دول الاستقدام </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="trackOrder.html"> تتبع طلبك </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="faq.html"> الاسئلة الشائعة  </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contact-us.html"> تواصل معنا </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="profile-orders.html"> حسابي </a>
-            </li>
-            <li class="nav-item ">
-              <a href="login.html" class="nav-link"> تسجيل دخول </a>
-            </li>
-            <li class="nav-item">
-              <a href="all-workers.html" class="defaultBtn mx-1"> طلب استقدام
-                <span></span>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <!-- toggle btn -->
-        <div class="sideBtn d-lg-none">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-        <!-- side menu -->
-        <div class="sideMenu">
-          <div class="sideMenuInner">
-            <a class="sideMenuLink" href="index.html"> الرئيسية </a>
-            <a class="sideMenuLink" href="services.html"> خدماتنا </a>
-            <a class="sideMenuLink" href="countries.html"> دول الاستقدام </a>
-            <a class="sideMenuLink" href="trackOrder.html"> تتبع طلبك </a>
-            <a class="sideMenuLink" href="faq.html"> الأسئلة الشائعة </a>
-            <a class="sideMenuLink" href="Contact-us.html"> تواصل معنا </a>
-            <a class="sideMenuLink"  href="login.html" > تسجيل دخول </a>
-            <a class="defaultBtn mb-2"  href="all-workers.html" > طلب استقدام
-              <span></span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
+  <header></header>
   <!-- ================ /Header ================= -->
   <content>
     <div class="overlay-content"></div>
@@ -746,7 +682,7 @@
   <script src="js/particles.js"></script>
   <script src="js/Custom.js"></script>
   <script>
-    // $("header").load("header.html");
+    $("header").load("header.html");
     $("footer").load("footer.html");
   </script>
   <script>
@@ -755,6 +691,13 @@
       $(this).toggleClass("active");
       $(".sideMenu").toggleClass("active");
     });
+  </script>
+  <script>
+    $(".button-float-ads").click(function() {
+	$('.button-float-ads .wrap').toggleClass("ani");
+	$('.ads-float-popup').toggleClass("open");
+	$('.img-fab.img').toggleClass("close");
+});
   </script>
 </body>
 
